# bluealsa-monitor

./: 10-bluealsa-monitor  21-bluealsa-raw.conf  README.md  alsaconf.in  bluealsa-monitor-env.conf  bluealsa-monitor.in  bluealsa-monitor.service.in  bluealsa_alsaconf.in  bluealsa_monitor_funcs.in  bluealsa_pulse.in  meson.build  meson_options.txt  monitor-funcs.in  pulse.in  udev.in
